# embedded-voice-agent

./: app.py  app.tcss  experiment.py  main.py  makefile  pyproject.toml
common/audio/: __init__.py  audio_player.py  audio_recorder.py
examples/textual/: app.py  makefile
raspberry/: app.py
server/: agent.py  main.py  pyproject.toml  utils.py
src/: audio.py  langchain_voice_agent.py
textual/: README.md  app.py  app.tcss
