[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "embedded-voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"gpiozero>=2.0.1 ; platform_machine == 'armv7l'",
	"langchain-core>=0.3.65",
	"lgpio>=0.2.2.0 ; platform_machine == 'armv7l'",
	"numpy>=2.3.0",
	"openai>=1.86.0",
	"openwakeword>=0.4.0",
	"pyaudio>=0.2.14",
	"python-dotenv>=1.1.0",
	"ruff>=0.11.13",
	"sounddevice>=0.5.2",
	"textual>=3.3.0",
	"textual-dev>=1.7.0",
	"websockets>=15.0.1",
]

[tool.setuptools]
py-modules = ["common", "raspberry"]
