[project]
name = "embedded-voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gpiozero>=2.0.1",
    "lgpio>=0.2.2.0",
    "numpy>=2.3.3",
    "openai>=1.107.1",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.1.1",
    "sounddevice>=0.5.2",
    "websockets>=15.0.1",
]
